diss: moving ***s and lots of different minor stuff

--- a/appendix1.tex
+++ b/appendix1.tex
@@ -15,7 +15,7 @@ and the addition of some comments and footnotes linking this work to other parts
 Furthermore, the notation was changed slightly towards the one introduced in Section~\ref{sec:regularconjugates}
 (most importantly, denoting posterior parameters with upper index ${}\un$ instead of ${}^{(1)}$,
 e.g., writing $\yn$ instead of $y^{(1)}$),
-and citations were updated and changed to the style employed throughout this thesis.
+and citations were updated and changed towards the style employed throughout this thesis.
 
 \subsubsection*{Abstract}
 
