--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -698,7 +698,13 @@
     Volume = {1},
     Year = {1973}}
 
-
+@BOOK{1954:savage,
+  title = {The {F}oundations of {S}tatistics},
+  publisher = {John Wiley \&\ Sons Inc.},
+  year = {1954},
+  author = {Savage, L.},
+  address = {New York}
+}
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
