--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -523,3 +523,15 @@ Pages = {342--368},
       year = {2010},
 }
 
+@article{2012:cattaneo-wiencierz,
+author = "Marco E.G.V. Cattaneo and Andrea Wiencierz",
+title = "Likelihood-based Imprecise Regression ",
+journal = "International Journal of Approximate Reasoning ",
+volume = "53",
+number = "8",
+pages = "1137 - 1154",
+year = "2012",
+url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
+}
+
+
