--- a/intro.tex
+++ b/intro.tex
@@ -10,7 +10,7 @@
 %\item other motivations for IP? --- later
 %\end{itemize}
 
-\section{Overview / Outline***}
+\section{***Overview / Outline}
 
 %\subsection{Outline}
 
@@ -52,8 +52,8 @@ and a paragraph from \textcite[\S 7]{itip-statinf}.
 Section~\ref{sec:generalmodel} consists of \textcite[\S 4.3]{itip-statinf},
 which was written primarily by Gero Walter.****
 
-***Section~\ref{sec:jstp} is an abriged version of \textcite{Walter2009a},
-with a slight change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
+***Section~\ref{sec:jstp} is a slightly abriged reproduction of \textcite{Walter2009a},
+with a minor change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
 (most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
 instead of $n^{(1)}$ and $y^{(1)}$, respectively).
 This paper was the result of a collaborative work, where both authors contributed
@@ -64,7 +64,8 @@ and contributed most of the introductory and concluding sections.***
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
 again with a slight change of notation for consistency with the rest of the material presented in this thesis.
 Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
-In this work, Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
+All three authors worked collaboratively on the work as whole but with emphasis on different parts.
+Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
 while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
 Here, it was possible to add a few explanatory paragraphs that could not appear in the original publication. 
 Thomas Augustin contributed substantially to all parts of the manuscript,
@@ -72,8 +73,13 @@ especially in the introductory and concluding sections.***
 
 ***Section~\ref{sec:festschrift} consists of \textcite{Walter2009b},
 which is a substantially extended version of \textcite{Walter2010a},
-reproduced here with a slight change in notation***
-In this work, ***who did what***
+reproduced here with a slight change in notation and some added comments.
+In this work, the result of a collaborative effort, Gero Walter contributed 
+the description of the examples in Section~\ref{sec:iid},
+and the computations and most of the write-up in Sections~\ref{sec:scp} and \ref{sec:cccp}.
+Sections~\ref{sec:festschrift-intro} and \ref{sec:discussion-festschrift} were a joined effort
+of Gero Walter and Thomas Augustin.
+
 
 \section{Notation}
 \label{sec:notation}
@@ -907,7 +913,7 @@ in case the normal heat removal process%
 \footnote{Heat from the core is transferred to steam generators,
 producing steam that drives turbines linked to generators producing electricity.
 Usually, the depressurized steam exiting the turbines
-is then condensed to water, which is fed back into the steam generators.}
+is then condensated to water, which is fed back into the steam generators.}
 is not available.
 When residual heat is not removed, it can overheat the core,
 which could lead to a (partial) core meltdown,
@@ -1662,7 +1668,7 @@ from various sorts of hypothetical data.
 \medskip
 
 In the above application, Bayesian inference in the Dirichlet-Multinomial model
-was generalized to imprecise or interval probability methods.
+was generalised to imprecise or interval probability methods.
 Next, in Chapter~\ref{cha:gbi},
 we will give a general introduction to the methodology of imprecise or interval probability,
 discuss further motivations for the use of interval probability methods for statistical inference,
