--- a/jstp.tex
+++ b/jstp.tex
@@ -1,4 +1,5 @@
-\section{***Generalised iLUCK-models (JSTP paper)***}
+\section{Imprecision and Prior-Data Conflict in Generalised Bayesian Inference}
+%\section{***Generalised iLUCK-models (JSTP paper)***}
 \label{sec:jstp}
 
 %****short intro from intro and abstract, examples already in Chapter~\ref{cha:intro}
@@ -1190,7 +1191,7 @@ The authors would like to thank two anonymous referees for their very stimulatin
 %\clearpage
 
 
-\section{The \texttt{luck} Package***} %***Software***}
+\section{***The \texttt{luck} Package} %***Software***}
 
 seperate section, take short description from abstract for ISIPTA'09 poster?
 
