--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -21,14 +21,13 @@ and discusses its application to the Normal-Normal and Dirichlet-Multinomial mod
 
 ***software?***
 
-***isipta07?***
+***isipta07 summary in appendix?***
 
 Section~\ref{sec:isipta11} presents further attempts to refine inference behaviour in the presence of \pdc,
-by two fundamentally different approaches, whose inferences nevertheless show facinating similarities. ***ISIPTA'11***
+by two fundamentally different approaches, whose inferences nevertheless show fascinating similarities. ***ISIPTA'11***
 
-***football example?***
+%***football example?***
 
-***more structure of section?*** 
 
 
 \section{Model Overview and Discussion}
