diss: version for TA, FC, CH and HK

--- a/diss.tex
+++ b/diss.tex
@@ -63,7 +63,7 @@
   \include{setsofconjugatepriors}
   \include{jstp}
   \include{isipta11}
-  \include{football}
+%  \include{football}
   \include{concluding}
   
   \begin{appendix}
