--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -586,7 +586,7 @@ resulting in a procedure that is related to Dempster's rule of conditioning \par
 Other ways to address this issue are update rules where imprecision is updated in accordance with an information measure 
 (\cite{1993:coolen, 1994:coolen}; see also \cite{1994:coolen::phd}), or hierarchical models,
 like the model suggested by \textcite{2008:cattaneo} in the (profile) likelihood context
-(see the short note in Section~\ref{sec:ip-related} below),
+(see the short describtion in Section~\ref{sec:hierarchical}),
 a variant of which also allows to incorporate prior information by using a so-called prior likelihood.
 
 Another important critique of the Generalised Bayes' Rule relates to issues from a decision theoretic point of view.
@@ -911,6 +911,7 @@ and touch on hierarchical models as an alternative.
 Other models based on sets of prior distributions will be discussed in Section~\ref{sec:alternatives}.***
 
 \subsubsection{Objections to Imprecise Probability Models}
+\label{sec:objections}
 
 It is often argued that imprecise probability methods are more difficult to apply than precise models,
 and lead to complicated and cumbersome inference procedures.
@@ -968,6 +969,7 @@ that eliciting two numbers instead of one must be more difficult a misconception
 \footnote{See, e.g., \textcite[\S 5.8.2]{1991:walley} for a more detailed discussion of this objection.}
 
 \subsubsection{Hierarchical Models}
+\label{sec:hierarchical}
 
 %***hierarchical Bayes, distribution over intervals ****model averaging???***: 
 %uncertainty is averaged out for inferences,
