diss: some more ideas concluding remarks

--- a/concluding.tex
+++ b/concluding.tex
@@ -4,9 +4,10 @@
 
 \section{***Summary / Discussion***}
 
-write again about general model framework (Section~\ref{})
+write again about general model framework (Section~\ref{sec:generalmodel}),
+inference properties etc.
 
-discussion of shapes as at end of ***
+discussion of shapes as at the end of Section~\ref{sec:pdc-sensitivity} and \ref{sec:ibbm-resume}***
 
 emphasise modeling opportunities, and realistic description and treatment
 of model uncertainty as in \ref{sec:objections}
@@ -100,8 +101,13 @@ hope for a joint publication of GW, FC and MB explaining this in detail.
 
 \textbf{finally, general thoughts about updating, learning, etc}
 
-elaborate thoughts in Section~\ref{sec:updating} again, some more?***
+elaborate thoughts in Section~\ref{sec:updating} again,
+see also comments at end of Section~\ref{sec:6-gw-071216},
 
-questions on (data) robustness, see isipta13 paper by Marco,
+dual role of $\nz$ (Section~\ref{sec:ibbm-resume})
+
+belief revision versus updating?
+
+questions on (data) robustness of IP models, see isipta13 paper by Marco
 
 
