diss: initials only in bibliography, and Rios Insua fixed

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -527,9 +527,9 @@
     Year = {2009}}
 
 @incollection{2000:bergerinsuaruggeri,
-    Author = {J.  Berger and  D. R\'{\i}os Insua and F. Ruggeri},
+    Author = {Berger, J. and  R\'{\i}os Insua, D. and Ruggeri, F.},
     Booktitle = {{Robust {B}ayesian Analysis}},
-    Editor = {D. R\'{\i}os Insua and F. Ruggeri},
+    Editor = {R\'{\i}os Insua, D. and Ruggeri, F.},
     Pages = {1-31},
     Publisher = {Springer},
     Address = {Berlin},
@@ -549,7 +549,7 @@
     Address = {New York},
     Author = {Shyamalkumar, N.},
     Booktitle = {Robust {B}ayesian {A}nalysis},
-    Editor = {D. R\'{\i}os Insua and F. Ruggeri},
+    Editor = {R\'{\i}os Insua, D. and Ruggeri, F.},
     Pages = {127--143},
     Publisher = {Springer},
     Title = {Likelihood robustness},
