--- a/head.tex
+++ b/head.tex
@@ -14,7 +14,11 @@
 \usepackage{paralist}
 \usepackage{csquotes}
 
-\usepackage[backend=bibtex,style=authoryear,maxbibnames=4,minbibnames=4,block=space,backref=true,dashed=false]{biblatex}
+\usepackage[backend=bibtex,style=authoryear,maxbibnames=4,minbibnames=4,block=space,backref=true,dashed=false,firstinits=true]{biblatex}
+%,firstinits=true %prints first names only as initals in the bibliography
+%\mkbibnamelast{} %for Rios Insua?
+
+
 \addbibresource{bib/eigene.bib}
 \addbibresource{bib/itip-refs.bib}
 \addbibresource{bib/other-refs.bib}
