diss: first try with oldauthor and oldeditor in refs

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -713,7 +713,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-structural,
@@ -723,7 +723,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-special,
@@ -733,7 +733,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-other,
@@ -743,7 +743,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-decision,
@@ -753,17 +753,19 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-ipgms,
-    author    = "Alessandro Antonucci and Cassio P. de Campos and Marco Zaffalon",
+    oldauthor    = "Alessandro Antonucci and Cassio P. de Campos and Marco Zaffalon",
+    author    = "Alessandro Antonucci and Cassio de Campos and Marco Zaffalon",
     title     = "Probabilistic Graphical Models",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    oldeditor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank Coolen and Matthias Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-classification,
@@ -773,7 +775,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-computation,
@@ -783,7 +785,7 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
 @incollection{itip-elicitation,
@@ -793,6 +795,6 @@
     publisher = "Wiley",
     year      = "2013",
     note      = "In preparation",
-    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+    editor    = "Frank P. A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
